html and css for header

--- a/index.html
+++ b/index.html
@@ -8,8 +8,19 @@
 </head>
 
 <body>
-    <h1>Crypto World</h1>
-</body>
-</body>
 
+    <header>
+        <div class="header_nav">
+        <li id="sitename"><a href="https://bryance97.github.io/CryptoWorld_workspace/">Crypto World</a></li>
+        <form action="post">
+        <li>Email / Username / Number<br><input type="text" name="email"></li>
+        <li>Password<br><input type="password" name="password"><br><a href="">Forgot login?</a></li>
+        <li><input type="submit" name="login" value="Log In"></li>
+        </form>
+        </div>
+    </header>
+
+</body>
+</body>
+                                                                                                                                                                                                                                                     
 </html>
