--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-
+    <!-- navigation tags - block level element -->
     <header>
         <div class="header_nav">
         <li id="sitename"><a href="https://bryance97.github.io/CryptoWorld_workspace/">Crypto World</a></li>
@@ -19,6 +19,34 @@
         </form>
         </div>
     </header>
+    <!-- end navigation -->
+
+    <section class="create">
+        <div class="create_img">
+        <p> </p>
+        <img src="assets\images\crypto-world.jpg">
+        </div>
+    
+        <div class="create_account">
+        <h1>Create an account</h1>
+        <p>It's free ... FOREVER.</p>
+        <li><input type="text" placeholder="First Name" id="firstname"><input type="text" placeholder="Last Name" id="lastname"></li>
+        <li><input type="text" placeholder="Mobile number or email address"></li>
+        <li><input type="text" placeholder="Re-enter mobile number or email address"></li>
+        <li><input type="password" placeholder="New password"></li>
+        <p>Birthday</p>
+        <li>
+        <select><option>Day</option></select>
+        <select><option>Month</option></select>
+        <select><option>Year</option></select>
+        <a href="">Why do I need to provide my date of birth?</a>
+        </li>
+        <li><input type="radio">Female <input type="radio">Male</li>
+        <li><input type="submit" value="Create an account"></li>
+        <li class="create_page"><a href="">Create a Page</a> for your pet</li>
+        </div>
+    
+    </section>
 
 </body>
 </body>
