add footer and fix css

--- a/index.html
+++ b/index.html
@@ -45,10 +45,15 @@
         <li><input type="submit" value="Create an account"></li>
         <li class="create_page"><a href="">Create a Page</a> for your pet</li>
         </div>
-    
+
     </section>
 
-</body>
+    <footer>
+        <div>
+        English (US)
+        <p>Designed By Stephanie Plaza, Johnson Maclin, Darnell Davy and  Bryan Cifuentes-Escobar </div>
+        </div>
+    </footer>
 </body>
                                                                                                                                                                                                                                                      
 </html>
