removed typo on html

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </li>
         <li><input type="radio">Female <input type="radio">Male</li>
         <li><input type="submit" value="Create an account"></li>
-        <li class="create_page"><a href="">Create a Page</a> for your pet</li>
+        <li class="create_page"><a href="">Create a Page</a></li>
         </div>
 
     </section>
